--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -9,9 +9,11 @@
     <color name="white">#FFFFFFFF</color>
 
 
-    <color name="primary">#FF000000</color>
-    <color name="onPrimary">#FFFFFFFF</color>
-    <color name="fontColor">#FF000000</color>
+
+    <color name="primary">#FFFFFFFF</color>
+    <color name="onPrimary">#413F42</color>
+    <color name="fontColor">#FFFFFFFF</color>
     <color name="lightFontColor">#413F42</color>
-    <color name="backGround">#F9F3EE</color>
+    <color name="backGround">#413F42</color>
+
 </resources>
