--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,15 +7,15 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.shekoo.testapi.ui.home.HomeFragment"
+        android:name="com.shekoo.testapi.ui.get.GetFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_get" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.shekoo.testapi.ui.dashboard.DashboardFragment"
+        android:name="com.shekoo.testapi.ui.post.PostFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_post" />
 
     <fragment
         android:id="@+id/navigation_notifications"
