--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,18 +8,18 @@
     <fragment
         android:id="@+id/navigation_home"
         android:name="com.shekoo.testapi.ui.get.GetFragment"
-        android:label="@string/title_home"
+        android:label="@string/get"
         tools:layout="@layout/fragment_get" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
         android:name="com.shekoo.testapi.ui.post.PostFragment"
-        android:label="@string/title_dashboard"
+        android:label="@string/post"
         tools:layout="@layout/fragment_post" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.shekoo.testapi.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:name="com.shekoo.testapi.ui.history.HistoryFragment"
+        android:label="@string/history"
+        tools:layout="@layout/fragment_history" />
 </navigation>
