--- a/app/src/main/res/layout/fragment_get.xml
+++ b/app/src/main/res/layout/fragment_get.xml
@@ -105,7 +105,7 @@
             android:hint="@string/enterUrl"
             android:inputType="textPersonName"
             android:minHeight="48dp"
-            android:textColor="@color/lightFontColor"
+            android:textColor="@color/fontColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView1" />
